<resources>
    <string name="app_name">Dometor</string>

    <string name="video_offline">缓存</string>
    <string name="video_attention">+ 关注</string>
    <string name="video_end"> - The End-</string>

    <string name="category_title">全部分类</string>
    <string name="hot_title">人气榜</string>
    <string name="about">关于</string>

    <string name="search_transition_name">transition_reveal</string>
    <string name="search_hint_text">寻找更多商品</string>
    <string name="search_title_tip">输入关键词找到更多商品</string>
    <string name="search_hot_keywords_tip">- 热门搜索词 -</string>
    <string name="search_result_count">+ 搜索到%2$d个与 %1$s 有关记录 +</string>


    <string name="cancel">取消</string>

    <string name="nickname">Satur</string>
    <string name="view_homepage">查看个人主页 ></string>

    <string name="collection">收藏</string>
    <string name="comment">评论</string>
    <string name="mine_message">我的消息</string>
    <string name="mine_attention">我的关注</string>
    <string name="mine_cache">我的缓存</string>
    <string name="view_history">观看记录</string>
    <string name="feedback">意见反馈</string>


    <string name="loading_text">加载中&#8230;</string>
    <string name="no_network">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败</string>
    <string name="empty_view_hint">内容建设中</string>
    <string name="splash_text">校园生活必备，零食洗衣应有尽有</string>

    <string name="normal_price">￥%1$.2f</string>
    <string name="vip_price">￥%1$.2f</string>
    <string name="goods_cnt">月销 %1$d 件</string>
    <string name="available_cnt">库存 %1$d 件</string>
    <string name="temp_detail">
如何避免？

如果您使用私人电脑，可以下载杀毒软件，进行全盘扫描保证没有中毒。

如果您使用公用电脑，可以请网络管理员修正配置选项或查找病毒来源。
    </string>


    <string name="copy_right_notice">内容部分数据归DangDang版权所有</string>
    <string name="not_use_commercial">本APP供学习交流和研究之用</string>
    <string name="since">copyright ©2018 Satur.</string>
    <string name="gitHub">GitHub</string>


</resources>
