<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:background="@color/color_white">


    <ImageView
        android:id="@+id/iv_short_cover"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:scaleType="fitXY"
        android:src="@drawable/placeholder_banner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<TextView-->
            <!--android:id="@+id/iv_avatar"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:layout_marginRight="15dp"-->
            <!--android:text="￥12.3"-->
            <!--tools:src="@mipmap/ic_launcher_round" />-->

            <LinearLayout
                android:id="@+id/layout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:layout_alignParentLeft="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_short_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="false"
                    android:textColor="@color/color_black"
                    android:textSize="14sp"
                    tools:text="商品名"
                    android:maxLines="3"
                    android:ellipsize="none" />

                <TextView
                    android:visibility="gone"
                    android:layout_marginTop="4dp"
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    tools:text="描述描述描述" />
            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="4dp"
            android:layout_alignParentEnd="true">

            <TextView
                android:id="@+id/tv_vip_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vip_price"
                android:textColor="@color/color_orange"
                android:textSize="18sp"
                android:layout_marginEnd="2dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_normal_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_light_black"
                android:textSize="12sp"
                android:text="@string/normal_price" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_goods_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#444444"
            android:textSize="12sp"
            android:layout_gravity="end"
            android:text="@string/goods_cnt" />


    </LinearLayout>

    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="0.5dp"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:background="@color/color_darker_gray" />-->

</LinearLayout>