<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_title_bg">
        <!--app:navigationIcon="?attr/homeAsUpIndicator">-->

        <RelativeLayout
            android:id="@+id/buttonBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/padding_common"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/toolbar_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding_common_d"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/nickname"
                android:textColor="@color/color_black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/toolbar_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/padding_common_d"
                android:src="@drawable/ic_share_black_24dp" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/mRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:srlAccentColor="#444444"
            app:srlEnablePreviewInEditMode="false"
            app:srlPrimaryColor="#DDDDDD">

            <com.scwang.smartrefresh.layout.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <cn.bingoogolapple.bgabanner.BGABanner
                    android:id="@+id/goods_banner"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="fitXY"
                    app:banner_indicatorGravity="bottom|center_horizontal"
                    app:banner_placeholderDrawable="@drawable/placeholder_banner"
                    app:banner_transitionEffect="alpha" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:id="@+id/goods_panel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:background="@android:color/white"
                        android:paddingBottom="@dimen/padding_common_v"
                        android:paddingLeft="@dimen/padding_common_h"
                        android:paddingRight="@dimen/padding_common_h"
                        android:paddingTop="@dimen/padding_common_v">


                        <TextView
                            android:id="@+id/goods_name"
                            style="@style/AppTheme.Label.Title"
                            android:ellipsize="none"
                            android:maxLines="3"
                            android:singleLine="false"
                            android:text="商品名商品名商品名商品名商品名商品名商品名商品名商品名商品名商品名商品名商品名商品名商品名商品名商品名"
                            android:textSize="18sp" />


                        <View
                            android:id="@+id/title_divider"
                            style="@style/AppTheme.DiverLine"
                            android:layout_below="@id/goods_name"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp" />

                        <LinearLayout
                            android:id="@+id/panel_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/title_divider"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tv_vip_price"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="2dp"
                                    android:text="@string/vip_price"
                                    android:textColor="@color/color_orange"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tv_normal_price"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="2dp"
                                    android:text="@string/vip_price"
                                    android:textColor="@color/color_darker_gray"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/panel_price"
                            android:layout_marginTop="@dimen/padding_common">

                            <TextView
                                android:id="@+id/goods_sold"
                                style="@style/AppTheme.Label"
                                android:text="@string/goods_cnt" />

                            <TextView
                                style="@style/AppTheme.Label"
                                android:layout_marginLeft="@dimen/padding_common_h"
                                android:layout_marginRight="@dimen/padding_common_h"
                                android:text="|" />

                            <TextView
                                android:id="@+id/goods_place"
                                style="@style/AppTheme.Label"
                                android:text="地点" />

                            <TextView
                                style="@style/AppTheme.Label"
                                android:layout_marginLeft="@dimen/padding_common_h"
                                android:layout_marginRight="@dimen/padding_common_h"
                                android:text="|" />

                            <TextView
                                android:id="@+id/available_cnt"
                                style="@style/AppTheme.Label"
                                android:text="@string/available_cnt" />
                        </LinearLayout>
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/backgroundColor"
                        android:orientation="vertical"
                        android:paddingBottom="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/padding_common"
                            android:layout_marginTop="@dimen/padding_common"
                            android:background="@color/color_division_line"
                            android:orientation="vertical"
                            android:paddingBottom="@dimen/division_line"
                            android:paddingTop="@dimen/division_line">

                            <RelativeLayout
                                android:id="@+id/goods_check"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/white"
                                android:paddingBottom="3dp"
                                android:paddingLeft="@dimen/padding_common"
                                android:paddingRight="@dimen/padding_common"
                                android:paddingTop="3dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:paddingBottom="@dimen/padding_common"
                                    android:paddingEnd="@dimen/padding_common_d"
                                    android:paddingStart="@dimen/padding_common_d"
                                    android:paddingTop="@dimen/padding_common"
                                    android:singleLine="true"
                                    android:text="选择规格"
                                    android:textColor="@color/color_black"
                                    android:textSize="16sp" />

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:layout_marginEnd="32dp"
                                    android:src="@drawable/ic_add_shopping_cart_black_24dp" />

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:src="@drawable/ic_arrow_right" />
                            </RelativeLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/goods_detail"
                            style="@style/AppTheme.Label.Description"
                            android:padding="16dp"
                            android:text="@string/temp_detail" />

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:gravity="end"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_gravity="top"
                android:layout_alignParentTop="true"
                style="@style/AppTheme.DiverLine" />

            <TextView
                android:id="@+id/btn_addto_cart"
                style="@style/AppTheme.Label"
                android:layout_alignParentEnd="true"

                android:layout_marginBottom="@dimen/padding_common"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/padding_common"

                android:background="@drawable/btn_radius_theme_bg"
                android:paddingBottom="8dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="8dp"
                android:text="加入购物车"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/btn_buy_now"
                style="@style/AppTheme.Label"
                android:layout_toLeftOf="@id/btn_addto_cart"

                android:layout_marginBottom="@dimen/padding_common"
                android:layout_marginTop="@dimen/padding_common"

                android:background="@drawable/btn_radius_theme_border_bg"
                android:paddingBottom="8dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="8dp"
                android:text="立即购买"
                android:textColor="@color/shopCarts" />

        </RelativeLayout>

    </FrameLayout>

</LinearLayout>